Cleanup css & components

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,10 +1,6 @@
 {
-  "admin.alerts.link": "Se logger her",
-  "admin.alerts.error": "Kunne ikke hente varsler. Prøv igjen senere.",
-  "admin.alerts.pending": "Laster inn varsler...",
   "admin.apps.name": "Navn",
   "admin.apps.search": "Søk i apper",
-  "admin.apps.alerts": "Varsler siste",
   "admin.apps.title": "Publiserte apper",
   "admin.apps.version": "Versjon",
   "admin.environment.at22": "Test — AT22",
@@ -36,16 +32,18 @@
   "admin.metrics.altinn_app_lib_processes_completed": "fullførte instanser",
   "admin.metrics.failed_process_next_requests": "feilende process/next",
   "admin.metrics.failed_instances_requests": "feilende instansieringer",
-  "admin.metrics.time_window": "Tidsvindu",
   "admin.metrics.heading": "Statistikk fra siste",
-  "admin.metrics.health.error": "Kunne ikke laste inn applikasjonenshelse for denne appen. Prøv igjen senere.",
-  "admin.metrics.health.loading": "Laster inn applikasjonenshelse for denne appen...",
-  "admin.metrics.errors.error": "Kunne ikke laste inn applikjasjonsfeil for denne appen. Prøv igjen senere.",
-  "admin.metrics.errors.loading": "Laster inn applikjasjonsfeil for denne appen...",
   "admin.metrics.app.error": "Kunne ikke laste inn applikasjonsmetrikker for denne appen. Prøv igjen senere.",
   "admin.metrics.app.loading": "Laster inn applikasjonsmetrikker for denne appen...",
+  "admin.metrics.app.health.error": "Kunne ikke laste inn applikasjonenshelse for denne appen. Prøv igjen senere.",
+  "admin.metrics.app.health.loading": "Laster inn applikasjonenshelse for denne appen...",
+  "admin.metrics.app.errors.error": "Kunne ikke laste inn applikasjonsfeil for denne appen. Prøv igjen senere.",
+  "admin.metrics.app.errors.loading": "Laster inn applikasjonsfeil for denne appen...",
+  "admin.metrics.errors": "Feil fra siste",
+  "admin.metrics.errors.link": "Se logger her",
+  "admin.metrics.errors.error": "Kunne ikke hente applikasjonsfeil. Prøv igjen senere.",
+  "admin.metrics.errors.pending": "Laster inn applikasjonsfeil...",
   "admin.metrics.ready_pods": "av podene er klare",
-  "admin.metrics.type": "Metrikk type",
   "ai_assistant.about_assistant": "Om assistenten",
   "ai_assistant.add_attachment": "Last opp vedlegg",
   "ai_assistant.allow_app_changes": "Tillat endringer i appen",
