--- a/src/Designer/frontend/resourceadm/language/src/nb.json
+++ b/src/Designer/frontend/resourceadm/language/src/nb.json
@@ -128,7 +128,7 @@
   "resourceadm.close_modal": "Lukk",
   "resourceadm.dashboard_change_organization_lists": "Endre tilgangslister",
   "resourceadm.dashboard_create_modal_create_button": "Opprett ressurs",
-  "resourceadm.dashboard_create_modal_resource_name_and_id_text": "Velg navn og id (minst 4 tegn) for ressursen. Språkstøtte på navn kan legges til på neste side. Id er foreslått basert på navnet du skriver og kan redigeres om du ønsker en annen. Navn kan endres senere, mens id kan ikke endres.",
+  "resourceadm.dashboard_create_modal_resource_name_and_id_text": "Velg id (minst 4 tegn) for ressursen. Id må starte med organisasjonskoden til din organisasjon, og kan kun inneholde små bokstaver a-z, _ og -. Id kan ikke endres senere.",
   "resourceadm.dashboard_create_modal_title": "Opprett ny ressurs",
   "resourceadm.dashboard_create_resource": "Opprett ny ressurs",
   "resourceadm.dashboard_create_resource_success": "Ny ressurs {{resourceName}} opprettet",
@@ -138,7 +138,7 @@
   "resourceadm.dashboard_import_environment_radio_header": "Velg miljø å importere fra",
   "resourceadm.dashboard_import_modal_import_button": "Importer lenketjeneste",
   "resourceadm.dashboard_import_modal_select_service_option": "Velg lenketjeneste...",
-  "resourceadm.dashboard_import_modal_resource_name_and_id_text": "Ressurs-id er foreslått basert på lenketjenesten du har valgt, og kan redigeres om du ønsker en annen. Id må inneholde minst 4 tegn, og kan ikke endres senere.",
+  "resourceadm.dashboard_import_modal_resource_name_and_id_text": "Ressurs-id er foreslått basert på lenketjenesten du har valgt, og kan redigeres om du ønsker en annen. Id må starte med organisasjonskoden til din organisasjon, må inneholde minst 4 tegn og kan kun inneholde små bokstaver a-z, _ og -. Id kan ikke endres senere.",
   "resourceadm.dashboard_import_modal_select_env": "Velg miljøet du vil importere fra",
   "resourceadm.dashboard_import_modal_select_env_option": "Velg miljø...",
   "resourceadm.dashboard_import_modal_select_service": "Velg lenketjenesten du vil importere",
@@ -149,12 +149,11 @@
   "resourceadm.dashboard_num_resources": "Alle ressurser ({{num}})",
   "resourceadm.dashboard_organizationdata_error_body": "Det oppsto en feil da vi skulle hente organisasjoner som kreves for å kjøre appen.",
   "resourceadm.dashboard_organizationdata_error_header": "Fikk ikke til å laste inn organisasjoner",
-  "resourceadm.dashboard_resource_id_cannot_be_app": "Ressurs id kan ikke starte med \"app_\".",
-  "resourceadm.dashboard_resource_id_cannot_be_se": "Ressurs id kan ikke starte med \"se_\".",
   "resourceadm.dashboard_resource_name_and_id_change": "Endre {{objectType}}",
   "resourceadm.dashboard_resource_name_and_id_checkmark_icon": "Bruk ny {{objectType}}",
   "resourceadm.dashboard_resource_name_and_id_delete_icon": "Slett ny {{objectType}}",
   "resourceadm.dashboard_resource_name_and_id_error": "Ressurs med valgt id eksisterer allerede.",
+  "resourceadm.dashboard_resource_id_must_start_with_org": "Ressurs-id må starte med {{orgPrefix}}.",
   "resourceadm.dashboard_resource_name_and_id_resource_id": "Ressurs-id",
   "resourceadm.dashboard_resource_name_and_id_resource_name": "Ressursnavn (Bokmål)",
   "resourceadm.dashboard_searchbox": "Søk etter en ressurs",
