--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -28,6 +28,23 @@
   "admin.instances.status.deleted": "Slettet",
   "admin.instances.status.unread": "Ulest",
   "admin.instances.title": "Instanser",
+  "admin.metrics.altinn_app_lib_processes_completed": "fullførte instanser",
+  "admin.metrics.altinn_app_lib_processes_started": "aktive instanser",
+  "admin.metrics.app.error": "Kunne ikke laste inn applikasjonsmetrikker for denne appen. Prøv igjen senere.",
+  "admin.metrics.app.errors.error": "Kunne ikke laste inn applikasjonsfeil for denne appen. Prøv igjen senere.",
+  "admin.metrics.app.errors.loading": "Laster inn applikasjonsfeil for denne appen...",
+  "admin.metrics.app.health.error": "Kunne ikke laste inn applikasjonenshelse for denne appen. Prøv igjen senere.",
+  "admin.metrics.app.health.loading": "Laster inn applikasjonenshelse for denne appen...",
+  "admin.metrics.app.loading": "Laster inn applikasjonsmetrikker for denne appen...",
+  "admin.metrics.errors": "Feil fra siste",
+  "admin.metrics.errors.error": "Kunne ikke hente applikasjonsfeil. Prøv igjen senere.",
+  "admin.metrics.errors.forbidden": "Du har ikke tilgang til å se applikasjonsfeil i {{env}}.",
+  "admin.metrics.errors.link": "Se logger her",
+  "admin.metrics.errors.loading": "Laster inn applikasjonsfeil...",
+  "admin.metrics.failed_instances_requests": "feilende instansieringer",
+  "admin.metrics.failed_process_next_requests": "feilende process/next",
+  "admin.metrics.heading": "Statistikk fra siste",
+  "admin.metrics.ready_pods": "av podene er klare",
   "ai_assistant.about_assistant": "Om assistenten",
   "ai_assistant.add_attachment": "Last opp vedlegg",
   "ai_assistant.allow_app_changes": "Tillat endringer i appen",
