--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -33,15 +33,18 @@
   "admin.metrics.app.error": "Kunne ikke laste inn applikasjonsmetrikker for denne appen. Prøv igjen senere.",
   "admin.metrics.app.errors.error": "Kunne ikke laste inn applikasjonsfeil for denne appen. Prøv igjen senere.",
   "admin.metrics.app.errors.loading": "Laster inn applikasjonsfeil for denne appen...",
+  "admin.metrics.app.errors.missing_rights": "Du har ikke rettigheter til å se applikasjonsfeil i {{envTitle}}. Be eierne i {{orgName}} om å gi deg tilgang.",
   "admin.metrics.app.health.error": "Kunne ikke laste inn applikasjonenshelse for denne appen. Prøv igjen senere.",
   "admin.metrics.app.health.loading": "Laster inn applikasjonenshelse for denne appen...",
+  "admin.metrics.app.health.missing_rights": "Du har ikke rettigheter til å se applikasjonenshelse i {{envTitle}}. Be eierne i {{orgName}} om å gi deg tilgang.",
   "admin.metrics.app.loading": "Laster inn applikasjonsmetrikker for denne appen...",
+  "admin.metrics.app.missing_rights": "Du har ikke rettigheter til å se applikasjonsmetrikker i {{envTitle}}. Be eierne i {{orgName}} om å gi deg tilgang.",
   "admin.metrics.errors": "Feil fra siste",
   "admin.metrics.errors.error": "Kunne ikke hente applikasjonsfeil. Prøv igjen senere.",
-  "admin.metrics.errors.forbidden": "Du har ikke tilgang til å se applikasjonsfeil i {{env}}.",
   "admin.metrics.errors.link": "Se logger her",
   "admin.metrics.errors.loading": "Laster inn applikasjonsfeil...",
-  "admin.metrics.failed_instances_requests": "feilende instansieringer",
+  "admin.metrics.errors.missing_rights": "Du har ikke rettigheter til å se applikasjonsfeil i {{envTitle}}. Be eierne i {{orgName}} om å gi deg tilgang.",
+  "admin.metrics.failed_instance_creation_requests": "feilende instansieringer",
   "admin.metrics.failed_process_next_requests": "feilende process/next",
   "admin.metrics.heading": "Statistikk fra siste",
   "admin.metrics.ready_pods": "av podene er klare",
