--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1111,7 +1111,7 @@
   "process_editor.configuration_panel_element_not_supported_title": "Elementet du har valgt, støttes ikke",
   "process_editor.configuration_panel_end_event": "Slutthendelse",
   "process_editor.configuration_panel_feedback_task": "Oppgave: Tilbakemelding",
-  "process_editor.configuration_panel_filename": "Sett filnavn for PDF",
+  "process_editor.configuration_panel_filename": "Filnavn for PDF",
   "process_editor.configuration_panel_header_help_text_confirmation": "Du bruker oppgaven Bekreftelse (confirmation) til å vise sluttbrukerne en oppsummering som de kan bekrefte.",
   "process_editor.configuration_panel_header_help_text_data": "Du bruker oppgaven Utfylling (data) hvis du skal samle inn eller vise data.",
   "process_editor.configuration_panel_header_help_text_feedback": "Du bruker oppgaven Tilbakemelding (feedback) når du vil at sluttbrukerne skal vente på en tilbakemelding fra tjenesteeier før de kan gå videre i arbeidsflyten eller avslutte den.",
@@ -1128,22 +1128,31 @@
   "process_editor.configuration_panel_no_task_message": "Velg en oppgave i diagrammet til venstre for å se detaljer om valgt oppgave.",
   "process_editor.configuration_panel_no_task_title": "Du har ikke valgt noen oppgave",
   "process_editor.configuration_panel_payment_task": "Oppgave: Betaling",
-  "process_editor.configuration_panel_pdf_create_button": "Opprett og fortsett",
+  "process_editor.configuration_panel_pdf_create_button": "Opprett",
   "process_editor.configuration_panel_pdf_data_model_required": "Du må velge en datamodell",
-  "process_editor.configuration_panel_pdf_filname_description": "Angi en tekstnøkkel for filnavnet til PDF-en. Dersom ingen nøkkel er valgt, brukes applikasjonsnavnet som filnavn.",
+  "process_editor.configuration_panel_pdf_filename_delete_confirm": "Er du sikker på at du vil fjerne filnavnet?",
+  "process_editor.configuration_panel_pdf_filename_empty_list": "Ingen tekstressurser tilgjengelig",
+  "process_editor.configuration_panel_pdf_filename_label": "Filnavn",
+  "process_editor.configuration_panel_pdf_filename_no_text_resource": "Ingen",
+  "process_editor.configuration_panel_pdf_filename_search_label": "Søk etter tekstressurs",
+  "process_editor.configuration_panel_pdf_filename_tab_search": "Søk",
+  "process_editor.configuration_panel_pdf_filename_tab_write": "Skriv tekst",
+  "process_editor.configuration_panel_pdf_filename_value_label": "Filnavn",
+  "process_editor.configuration_panel_pdf_filname_description": "Angi filnavn for PDF-en, uten filendelse. Dersom intet filnavn er angitt, brukes applikasjonsnavnet som filnavn.",
   "process_editor.configuration_panel_pdf_layout_set_label": "Layout-sett",
-  "process_editor.configuration_panel_pdf_layout_set_link": "Gå til utforming for {{layoutSetId}}",
-  "process_editor.configuration_panel_pdf_layout_set_name_description": "Dette navnet vil brukes til å identifisere layout-settet i «Utforming».",
-  "process_editor.configuration_panel_pdf_layout_set_name_label": "Navn på layout-sett",
+  "process_editor.configuration_panel_pdf_layout_set_link": "Utform PDF",
+  "process_editor.configuration_panel_pdf_layout_set_name_description": "Gi oppgaven et navn for å identifisere den i utformingsfanen.",
+  "process_editor.configuration_panel_pdf_layout_set_name_label": "Navn på oppgave",
   "process_editor.configuration_panel_pdf_layout_set_required_description": "Opprett et nytt layout-sett som vil brukes til å generere PDF-en.",
   "process_editor.configuration_panel_pdf_layout_set_required_heading": "Layout-basert PDF krever et layout-sett",
-  "process_editor.configuration_panel_pdf_mode": "Velg hvordan PDF-en skal genereres",
-  "process_editor.configuration_panel_pdf_mode_automatic": "Automatisk",
-  "process_editor.configuration_panel_pdf_mode_change_to_automatic_confirm": "Er du sikker på at du vil bytte til automatisk? Dette vil slette det tilknyttede layout-settet.",
-  "process_editor.configuration_panel_pdf_mode_layout_based": "Layout-basert",
+  "process_editor.configuration_panel_pdf_mode": "PDF-generering",
+  "process_editor.configuration_panel_pdf_mode_automatic": "Standard",
+  "process_editor.configuration_panel_pdf_mode_change_to_automatic_confirm": "Er du sikker på at du vil bytte til standard oppsett? Dette vil slette det egendefinerte PDF-oppsettet.",
+  "process_editor.configuration_panel_pdf_mode_description": "Velg oppsett for PDF-generering. Ved standard oppsett genereres PDF-en automatisk basert på de valgte oppgavene. Velg eget oppsett dersom du ønsker å tilpasse PDF-en selv ved hjelp av utformingsverktøyet.",
+  "process_editor.configuration_panel_pdf_mode_layout_based": "Eget oppsett",
   "process_editor.configuration_panel_pdf_no_data_models": "Ingen datamodeller tilgjengelig",
-  "process_editor.configuration_panel_pdf_select_data_model_description": "Velg hvilken datamodell som skal brukes.",
-  "process_editor.configuration_panel_pdf_select_data_model_label": "Velg datamodell",
+  "process_editor.configuration_panel_pdf_select_data_model_description": "Velg en datamodell å knytte til oppgaven.",
+  "process_editor.configuration_panel_pdf_select_data_model_label": "Datamodell",
   "process_editor.configuration_panel_pdf_task": "Oppgave: Lag PDF",
   "process_editor.configuration_panel_policy_title": "Tilganger",
   "process_editor.configuration_panel_select_tasks_placeholder": "Velg oppgaver",
