--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -382,6 +382,19 @@
   "app_settings.setup_tab_switch_messageBoxConfig_hideSettings_hideAlways_description": "Alle eksemplarene av tjenesten blir skjult i innboksen. Eksemplarene er tilgjengelig via API. ",
   "app_settings.setup_tab_switch_onEntry_show": "Vis en liste over eksemplarer brukerne har startet på",
   "app_settings.setup_tab_switch_onEntry_show_description": "Brukerne får åpne tjenesten med en liste over tidligere eksemplarer de kan velge fra og fortsette på. De kan også velge å opprette et nytt eksemplar.",
+  "app_validation.app_metadata.contact_points.required": "Kontaktinformasjon er påkrevd.",
+  "app_validation.app_metadata.description.en.required": "Beskrivelse av appen på engelsk er påkrevd.",
+  "app_validation.app_metadata.description.nb.required": "Beskrivelse av appen på bokmål er påkrevd.",
+  "app_validation.app_metadata.description.nn.required": "Beskrivelse av appen på nynorsk er påkrevd.",
+  "app_validation.app_metadata.description.required": "Beskrivelse av appen er påkrevd.",
+  "app_validation.app_metadata.right_description.en.required": "Delegeringstekst av appen på engelsk er påkrevd.",
+  "app_validation.app_metadata.right_description.nb.required": "Delegeringstekst av appen på bokmål er påkrevd.",
+  "app_validation.app_metadata.right_description.nn.required": "Delegeringstekst av appen på nynorsk er påkrevd.",
+  "app_validation.app_metadata.right_description.required": "Delegeringstekst av appen er påkrevd.",
+  "app_validation.app_metadata.title.en.required": "Navn på appen på engelsk er påkrevd.",
+  "app_validation.app_metadata.title.nb.required": "Navn på appen på bokmål er påkrevd.",
+  "app_validation.app_metadata.title.nn.required": "Navn på appen på nynorsk er påkrevd.",
+  "app_validation.app_metadata.title.required": "Navn på appen er påkrevd.",
   "branching.new_branch_dialog.branch_name_label": "Navn på gren",
   "branching.new_branch_dialog.branch_name_placeholder": "F.eks. feature/min-nye-funksjon",
   "branching.new_branch_dialog.create": "Opprett gren",
