feat: Published code lists in layout editor

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -2154,11 +2154,15 @@
   "ux_editor.options.multiple": "{{value}} alternativer",
   "ux_editor.options.option_edit_text": "Rediger kodeliste",
   "ux_editor.options.option_remove_text": "Fjern kobling til kodelisten",
+  "ux_editor.options.published_code_list.choose": "Velg publisert kodeliste",
+  "ux_editor.options.published_code_list.name": "Navn",
+  "ux_editor.options.published_code_list.version": "Versjon",
+  "ux_editor.options.published_code_list_in_use": "Komponenten bruker versjon <code>{{version}}</code> av kodelisten <code>{{codeListName}}</code>.",
   "ux_editor.options.section_heading": "Valg for alternativer",
   "ux_editor.options.single": "{{value}} alternativ",
   "ux_editor.options.tab_code_list": "Velg kodeliste",
   "ux_editor.options.tab_manual": "Sett opp egne alternativer",
-  "ux_editor.options.tab_option_list_alert_title": "Komponenten refererer allerede til en egendefinert ID. Legger du til en ny kodeliste her vil du overstyre den egendefinerte ID-en.",
+  "ux_editor.options.tab_option_list_alert_title": "Komponenten refererer allerede til en egendefinert ID. Legger du til en ny kodeliste her, vil du overstyre den egendefinerte ID-en.",
   "ux_editor.options.tab_reference_id": "Angi referanse-ID",
   "ux_editor.options.tab_reference_id_alert_title": "Du har allerede referert til en kodeliste. Skriver du inn en ID, vil referansen bli slettet.",
   "ux_editor.options.upload_title": "Last opp egen kodeliste",
