--- a/src/Designer/frontend/language/src/en.json
+++ b/src/Designer/frontend/language/src/en.json
@@ -565,6 +565,14 @@
   "process_editor.fetch_bpmn_error_message": "The BPMN file you're looking for could not be found. You might want to consider refreshing the page to attempting to refetch the BPMN file.",
   "process_editor.fetch_bpmn_error_title": "An error occurred while loading BPMN",
   "process_editor.loading": "Retrieving your BPMN file",
+  "process_editor.palette_create_confirmation_task": "Create confirmation task",
+  "process_editor.palette_create_data_task": "Create data task",
+  "process_editor.palette_create_feedback_task": "Create feedback task",
+  "process_editor.palette_create_payment_task": "Create payment task",
+  "process_editor.palette_create_pdf_service_task": "Create PDF service task",
+  "process_editor.palette_create_signing_task": "Create signing task",
+  "process_editor.palette_create_user_controlled_signing_task": "Create user-controlled signing task",
+  "process_editor.palette_pdf_service_task_version_error": "This functionality requires version {{version}} or higher of the Altinn.App-.NET libraries.",
   "process_editor.save": "Save",
   "process_editor.unsaved_changes": "You have {{count}} unsaved changes",
   "receipt.attachments": "Attachments",
