--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1178,6 +1178,14 @@
   "process_editor.not_found_diagram_heading": "Det er ingen tilgjengelige diagramdata",
   "process_editor.not_found_process_error_message": "Det finnes ingen arbeidsflyt definert innenfor BPMN, Du kan sjekke om flyten finnes i BPMN-filen.",
   "process_editor.not_found_process_heading": "Fant ingen arbeidsflyt",
+  "process_editor.palette_create_confirmation_task": "Lag bekreftelsesoppgave",
+  "process_editor.palette_create_data_task": "Lag dataoppgave",
+  "process_editor.palette_create_feedback_task": "Lag tilbakemeldingsoppgave",
+  "process_editor.palette_create_payment_task": "Lag betalingsoppgave",
+  "process_editor.palette_create_pdf_service_task": "Lag PDF-systemoppgave",
+  "process_editor.palette_create_signing_task": "Lag signeringsoppgave",
+  "process_editor.palette_create_user_controlled_signing_task": "Lag brukerstyrt signeringsoppgave",
+  "process_editor.palette_pdf_service_task_version_error": "Denne funksjonaliteten krever versjon {{version}} eller høyere av Altinn.App-.NET-bibliotekene.",
   "process_editor.recommended_action.new_name": "Gi oppgaven et navn",
   "process_editor.recommended_action.new_name_description": "Et godt navn gjør at du lettere finner oppgaven igjen på Utforming-siden. Hvis du velger Hopp over får oppgaven et tilfeldig navn, men det kan du endre senere.",
   "process_editor.recommended_action.new_name_label": "Navn på oppgaven",
