Replace BranchSelector with BranchDropdown

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -2229,6 +2229,26 @@
   "validation_errors.upload_file_name_occupied": "Opplastning feilet. Du prøvde å laste opp en fil som finnes fra før.",
   "validation_errors.upload_file_name_required": "Opplastning feilet. Filnavnet kan ikke være tomt.",
   "validation_errors.value_as_url": "Ugyldig lenke.",
+  "branching.new_branch_dialog.branch_name_label": "Navn på gren",
+  "branching.new_branch_dialog.branch_name_placeholder": "F.eks. feature/min-nye-funksjon",
+  "branching.new_branch_dialog.create": "Opprett gren",
+  "branching.new_branch_dialog.description": "Lag en ny gren basert på <strong>{{currentBranch}}</strong>. Du blir automatisk byttet til den nye grenen.",
+  "branching.new_branch_dialog.error_already_exists": "En gren med dette navnet eksisterer allerede",
+  "branching.new_branch_dialog.error_empty": "Grennavn kan ikke være tomt",
+  "branching.new_branch_dialog.error_generic": "Kunne ikke opprette gren",
+  "branching.new_branch_dialog.error_invalid_chars": "Grennavn inneholder ugyldige tegn",
+  "branching.new_branch_dialog.error_invalid_pattern": "Grennavn har ugyldig format",
+  "branching.new_branch_dialog.error_reserved_ending": "Grennavn kan ikke slutte med .lock",
+  "branching.new_branch_dialog.hint": "Navn på grener kan ha bokstaver, tall, bindestreker og skråstreker.",
+  "branching.new_branch_dialog.trigger": "Ny gren",
+  "branching.select_branch": "Velg gren",
+  "branching.uncommitted_changes_dialog.alert": "Du har endringer på grenen <strong>{{currentBranch}}</strong> som ikke er delt. Du kan ikke bytte til <strong>{{targetBranch}}</strong> før du har delt eller slettet endringene.",
+  "branching.uncommitted_changes_dialog.cancel": "Nei, avbryt",
+  "branching.uncommitted_changes_dialog.choose_action": "Ønsker du å slette endringene dine og bytte gren?",
+  "branching.uncommitted_changes_dialog.confirm_discard": "Du sletter nå alle endringene dine på denne grenen. Du kan ikke gjenopprette dem.",
+  "branching.uncommitted_changes_dialog.discard_and_switch": "Ja, slett endringene",
+  "branching.uncommitted_changes_dialog.heading": "Du har endringer som ikke er lagret",
+  "branching.uncommitted_changes_dialog.uncommitted_files": "Filer med endringer ({{count}})",
   "version_control.branch_selector.heading": "Velg gren",
   "version_dialog.backend": "Backend",
   "version_dialog.current_version": "Gjeldende versjon",
