lots of small improvements

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,25 +1,47 @@
 {
+  "admin.app": "App",
+  "admin.app.info.app_version": "App-versjon",
+  "admin.app.info.backend_version": "Backend-version",
+  "admin.app.info.commit": "Commit",
+  "admin.app.info.frontend_version": "Frontend-version",
+  "admin.app.info.publish_date": "Publiseringsdato",
+  "admin.app.info.published_by": "Publisert av",
+  "admin.app.info.title": "Informasjon om appen",
   "admin.apps.name": "Navn",
   "admin.apps.search": "Søk i apper",
   "admin.apps.title": "Publiserte apper",
+  "admin.apps.title_env": "Publiserte apper ($t(admin.environment.{{environment}}))",
   "admin.apps.version": "Versjon",
-  "admin.environment.at22": "Test — AT22",
-  "admin.environment.at23": "Test — AT23",
-  "admin.environment.at24": "Test — AT24",
+  "admin.environment": "Miljø",
+  "admin.environment.at22": "AT22",
+  "admin.environment.at23": "AT23",
+  "admin.environment.at24": "AT24",
+  "admin.environment.name": "$t(admin.environment.{{environment}})",
   "admin.environment.production": "Produksjon",
-  "admin.environment.tt02": "Test",
-  "admin.environment.yt01": "Test — YT01",
-  "admin.instances.archive_reference": "Arkivreferanse",
+  "admin.environment.tt02": "TT02",
+  "admin.environment.yt01": "YT01",
+  "admin.instances.archive_reference": "ID / Arkivreferanse",
   "admin.instances.archive_reference_validation": "Må være en gyldig instans-ID eller arkivreferanse.",
   "admin.instances.created": "Opprettet",
   "admin.instances.created_before": "Vis instanser som er eldre enn",
   "admin.instances.created_option": "{{days}} dager",
+  "admin.instances.data.content_type": "Innholdstype",
+  "admin.instances.data.file_scan_result": "Resultat av filskanning",
+  "admin.instances.data.id": "Dataelement-ID",
+  "admin.instances.data.locked": "Låst",
+  "admin.instances.data.size": "Størrelse",
+  "admin.instances.data.size_kb": "{{size}} KB",
+  "admin.instances.data.type": "Data type",
+  "admin.instances.data_elements": "Dataelementer",
   "admin.instances.fetch_more": "Last inn 10 flere rader",
   "admin.instances.filter.all": "Alle",
   "admin.instances.filter.no": "Nei",
   "admin.instances.filter.yes": "Ja",
-  "admin.instances.id": "Id",
+  "admin.instances.id": "ID",
+  "admin.instances.info.title": "Informasjon om instansen",
+  "admin.instances.last_changed": "Sist endret",
   "admin.instances.missing_rights": "Du har ikke rettigheter til å se instanser i {{envTitle}}. Be eierne i {{orgName}} om å gi deg tilgang.",
+  "admin.instances.no_results": "Ingen instanser funnet som samsvarer med kriteriene",
   "admin.instances.process_task": "Prosessteg",
   "admin.instances.status": "Status",
   "admin.instances.status.active": "Aktiv",
