--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,9 +1,9 @@
 {
   "admin.app": "App",
   "admin.app.info.app_version": "App-versjon",
-  "admin.app.info.backend_version": "Backend-version",
+  "admin.app.info.backend_version": "Backend-versjon",
   "admin.app.info.commit": "Commit",
-  "admin.app.info.frontend_version": "Frontend-version",
+  "admin.app.info.frontend_version": "Frontend-versjon",
   "admin.app.info.publish_date": "Publiseringsdato",
   "admin.app.info.published_by": "Publisert av",
   "admin.app.info.title": "Informasjon om appen",
@@ -31,7 +31,7 @@
   "admin.instances.data.locked": "Låst",
   "admin.instances.data.size": "Størrelse",
   "admin.instances.data.size_kb": "{{size}} KB",
-  "admin.instances.data.type": "Data type",
+  "admin.instances.data.type": "Datatype",
   "admin.instances.data_elements": "Dataelementer",
   "admin.instances.fetch_more": "Last inn 10 flere rader",
   "admin.instances.filter.all": "Alle",
@@ -648,6 +648,7 @@
   "general.loading": "Laster...",
   "general.menu": "Meny",
   "general.next": "Neste",
+  "general.no": "Nei",
   "general.no_options": "Ingen alternativer tilgjengelige",
   "general.open_app_in_new_window": "Lenken åpnes i en ny fane",
   "general.option": "Alternativ",
