better handle missing production environment

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -17,6 +17,7 @@
   "admin.environment.at23": "AT23",
   "admin.environment.at24": "AT24",
   "admin.environment.name": "$t(admin.environment.{{environment}})",
+  "admin.environment.no_results": "{{orgName}} har ingen miljøer.",
   "admin.environment.production": "Produksjon",
   "admin.environment.tt02": "TT02",
   "admin.environment.yt01": "YT01",
@@ -41,7 +42,7 @@
   "admin.instances.info.title": "Informasjon om instansen",
   "admin.instances.last_changed": "Sist endret",
   "admin.instances.missing_rights": "Du har ikke rettigheter til å se instanser i {{envTitle}}. Be eierne i {{orgName}} om å gi deg tilgang.",
-  "admin.instances.no_results": "Ingen instanser funnet som samsvarer med kriteriene",
+  "admin.instances.no_results": "Ingen instanser funnet som samsvarer med kriteriene.",
   "admin.instances.process_task": "Prosessteg",
   "admin.instances.status": "Status",
   "admin.instances.status.active": "Aktiv",
