--- a/src/Designer/frontend/language/src/en.json
+++ b/src/Designer/frontend/language/src/en.json
@@ -561,6 +561,27 @@
   "popover.popover_open": "Popover open",
   "preview.title": "Preview",
   "process_editor-view_mode": "View mode",
+  "process_editor.configuration_panel_filename": "PDF filename",
+  "process_editor.configuration_panel_pdf_create_button": "Create",
+  "process_editor.configuration_panel_pdf_filename_label": "Filename",
+  "process_editor.configuration_panel_pdf_filename_no_text_resource": "None",
+  "process_editor.configuration_panel_pdf_filename_search_label": "Search for text resource",
+  "process_editor.configuration_panel_pdf_filename_tab_search": "Search",
+  "process_editor.configuration_panel_pdf_filename_tab_write": "Write text",
+  "process_editor.configuration_panel_pdf_filename_value_label": "Filename",
+  "process_editor.configuration_panel_pdf_filname_description": "Enter filename for the PDF, without file extension. If no filename is provided, the application name is used as the filename.",
+  "process_editor.configuration_panel_pdf_layout_set_link": "Design PDF",
+  "process_editor.configuration_panel_pdf_layout_set_name_description": "Give the task a name to identify it in the design tab.",
+  "process_editor.configuration_panel_pdf_layout_set_name_label": "Task name",
+  "process_editor.configuration_panel_pdf_mode": "PDF generation",
+  "process_editor.configuration_panel_pdf_mode_automatic": "Standard",
+  "process_editor.configuration_panel_pdf_mode_change_to_automatic_confirm": "Are you sure you want to switch to standard layout? This will delete the custom PDF layout.",
+  "process_editor.configuration_panel_pdf_mode_description": "Choose layout for PDF generation. With standard layout, the PDF is generated automatically based on the selected tasks. Choose custom layout if you want to customise the PDF yourself using the design tool.",
+  "process_editor.configuration_panel_pdf_mode_layout_based": "Custom layout",
+  "process_editor.configuration_panel_pdf_no_data_models": "No data models available",
+  "process_editor.configuration_panel_pdf_select_data_model_description": "Select a data model to link to the task.",
+  "process_editor.configuration_panel_pdf_select_data_model_label": "Data model",
+  "process_editor.configuration_panel_select_tasks_placeholder": "Select tasks",
   "process_editor.edit_mode": "Edit mode",
   "process_editor.fetch_bpmn_error_message": "The BPMN file you're looking for could not be found. You might want to consider refreshing the page to attempting to refetch the BPMN file.",
   "process_editor.fetch_bpmn_error_title": "An error occurred while loading BPMN",
