Add missing texts

--- a/src/Designer/frontend/language/src/en.json
+++ b/src/Designer/frontend/language/src/en.json
@@ -562,6 +562,7 @@
   "preview.title": "Preview",
   "process_editor-view_mode": "View mode",
   "process_editor.configuration_panel_filename": "PDF filename",
+  "process_editor.configuration_panel_header_help_text_pdf": "Use the PDF task to generate a PDF based on the data collected in previous tasks.",
   "process_editor.configuration_panel_pdf_create_button": "Create",
   "process_editor.configuration_panel_pdf_filename_label": "Filename",
   "process_editor.configuration_panel_pdf_filename_no_text_resource": "None",
@@ -581,6 +582,7 @@
   "process_editor.configuration_panel_pdf_no_data_models": "No data models available",
   "process_editor.configuration_panel_pdf_select_data_model_description": "Select a data model to link to the task.",
   "process_editor.configuration_panel_pdf_select_data_model_label": "Data model",
+  "process_editor.configuration_panel_pdf_task": "Task: Generate PDF",
   "process_editor.configuration_panel_select_tasks_placeholder": "Select tasks",
   "process_editor.edit_mode": "Edit mode",
   "process_editor.fetch_bpmn_error_message": "The BPMN file you're looking for could not be found. You might want to consider refreshing the page to attempting to refetch the BPMN file.",
