--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1115,6 +1115,7 @@
   "process_editor.configuration_panel_header_help_text_data": "Du bruker oppgaven Utfylling (data) hvis du skal samle inn eller vise data.",
   "process_editor.configuration_panel_header_help_text_feedback": "Du bruker oppgaven Tilbakemelding (feedback) når du vil at sluttbrukerne skal vente på en tilbakemelding fra tjenesteeier før de kan gå videre i arbeidsflyten eller avslutte den.",
   "process_editor.configuration_panel_header_help_text_payment": "Du bruker oppgaven Betaling (payment) når du vil at sluttbrukerne skal betale for noe.",
+  "process_editor.configuration_panel_header_help_text_pdf": "Du bruker oppgaven til å generere en PDF basert på dataene som er samlet inn i tidligere oppgaver.",
   "process_editor.configuration_panel_header_help_text_signing": "Du bruker oppgaven Signering (signing) når du vil at sluttbrukerne skal bekrefte med signatur.",
   "process_editor.configuration_panel_header_help_text_title": "Informasjon om valgt oppgave",
   "process_editor.configuration_panel_layout_set_id_not_unique": "Navnet må være unikt",
@@ -1146,6 +1147,7 @@
   "process_editor.configuration_panel_pdf_no_data_models": "Ingen datamodeller tilgjengelig",
   "process_editor.configuration_panel_pdf_select_data_model_description": "Velg en datamodell å knytte til oppgaven.",
   "process_editor.configuration_panel_pdf_select_data_model_label": "Datamodell",
+  "process_editor.configuration_panel_pdf_task": "Oppgave: Lag PDF",
   "process_editor.configuration_panel_policy_title": "Tilganger",
   "process_editor.configuration_panel_select_tasks_placeholder": "Velg oppgaver",
   "process_editor.configuration_panel_set_data_model": "Datamodell: {{dataModelName}}",
