Fix metric names

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -51,8 +51,8 @@
   "admin.instances.status.deleted": "Slettet",
   "admin.instances.status.unread": "Ulest",
   "admin.instances.title": "Instanser",
-  "admin.metrics.altinn_app_lib_processes_completed": "fullførte instanser",
-  "admin.metrics.altinn_app_lib_processes_started": "aktive instanser",
+  "admin.metrics.altinn_app_lib_processes_ended": "fullførte instanser",
+  "admin.metrics.altinn_app_lib_processes_started": "instanser",
   "admin.metrics.app.error": "Kunne ikke laste inn applikasjonsmetrikker for denne appen. Prøv igjen senere.",
   "admin.metrics.app.errors.error": "Kunne ikke laste inn applikasjonsfeil for denne appen. Prøv igjen senere.",
   "admin.metrics.app.errors.loading": "Laster inn applikasjonsfeil for denne appen...",
