--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -260,8 +260,8 @@
   "app_settings.about_tab_delegable_field_description": "Velg om appen skal være delegerbar.",
   "app_settings.about_tab_delegable_field_label": "Delegerbar app",
   "app_settings.about_tab_delegable_show_text": "Appen er {{shouldText}} delegerbar.",
-  "app_settings.about_tab_description_field_description": "Beskrivelsen av appen blir synlig for brukerne. Den bør være kort og presis.",
-  "app_settings.about_tab_description_field_label": "Beskrivelse av appen",
+  "app_settings.about_tab_description_field_description": "Forklar hva appen gjør og hvordan sluttbrukere kan bruke den",
+  "app_settings.about_tab_description_field_label": "Beskriv av appen",
   "app_settings.about_tab_enterprise_user_field_description": "Brukeren som opptrer på vegne av en part kan være en virksomhetsbruker.",
   "app_settings.about_tab_enterprise_user_field_label": "Virksomhetsbruker",
   "app_settings.about_tab_enterprise_user_show_text": "Appen har {{shouldText}} Virksomhetsbruker aktivert.",
@@ -272,18 +272,18 @@
   "app_settings.about_tab_error_translation_missing_en": "Det mangler oversettelse for {{field}} på engelsk",
   "app_settings.about_tab_error_translation_missing_nb": "Det mangler oversettelse for {{field}} på bokmål",
   "app_settings.about_tab_error_translation_missing_nn": "Det mangler oversettelse for {{field}} på nynorsk",
-  "app_settings.about_tab_error_usage_string_description": "beskrivelse av appen",
+  "app_settings.about_tab_error_usage_string_description": "Beskrive av appen",
   "app_settings.about_tab_error_usage_string_right_description": "delegeringstekst",
-  "app_settings.about_tab_error_usage_string_service_name": "navn på appen",
+  "app_settings.about_tab_error_usage_string_service_name": "Navngi appen",
   "app_settings.about_tab_heading": "Om appen",
   "app_settings.about_tab_homepage_field_description": "Lenke til informasjon om hvor sluttbrukerne kan finne appen og informasjon om den.",
   "app_settings.about_tab_homepage_field_label": "Hjemmeside",
   "app_settings.about_tab_keywords_description": "Ord som er enkle å søke på. Skill hvert ord med komma \",\".",
   "app_settings.about_tab_keywords_label": "Nøkkelord for appen (bokmål, nynorsk og engelsk)",
   "app_settings.about_tab_language_translation_header": "Oversettelse av {{field}}",
-  "app_settings.about_tab_name_description": "Navnet blir synlig for brukerne og bør beskrive appen.",
+  "app_settings.about_tab_name_description": "Velg et navn som sluttbrukere forstår",
   "app_settings.about_tab_name_error": "Du må fylle ut App-navn. Du kan endre navnet helt frem til du skal publisere appen.",
-  "app_settings.about_tab_name_label": "Navn på appen",
+  "app_settings.about_tab_name_label": "Navngi appen",
   "app_settings.about_tab_repo_description": "Dette er en unik ID for appen både i URL-er og i API-er.",
   "app_settings.about_tab_repo_label": "Navn på repositoriet",
   "app_settings.about_tab_reset_button": "Avbryt",
@@ -772,12 +772,12 @@
   "language.mt": "Maltesisk",
   "language.my": "Burmesisk",
   "language.na": "Nauru",
-  "language.nb": "bokmål",
+  "language.nb": "Bokmål",
   "language.nd": "Nord-ndebele",
   "language.ne": "Nepali",
   "language.ng": "Ndonga",
   "language.nl": "Nederlandsk",
-  "language.nn": "nynorsk",
+  "language.nn": "Nynorsk",
   "language.no": "Norsk",
   "language.nr": "Sør-ndebele",
   "language.nv": "Navajo",
