--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -452,7 +452,7 @@
   "contact.slack.content": "Hvis du har spørsmål om hvordan du bygger en app, kan du snakke direkte med utviklingsteamet i Altinn Studio på Slack. De hjelper deg med å",
   "contact.slack.content_list": "<0>bygge appene slik du ønsker</0><0>svare på spørsmål og veilede deg</0><0>ta imot innspill på ny funksjonalitet</0>",
   "contact.slack.heading": "Skriv melding til oss Slack",
-  "contact.slack.link": "altinn.slack.com",
+  "contact.slack.link": "digdir-samarbeid.slack.com",
   "dashboard.all_apps": "Alle apper",
   "dashboard.all_data_models": "Alle datamodeller",
   "dashboard.all_resources": "Alle ressurser",
