--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -171,6 +171,7 @@
   "app_create_release.release_version_number_validation": "Må være en unik kombinasjon av tall, små bokstaver (a-z) og spesialtegnene \".\" og \"-\". Maks 128 tegn.",
   "app_create_release.status_popover": "Status for neste bygg",
   "app_create_release.still_building_release": "Bygger fortsatt versjon {{version}}",
+  "app_create_release.validation_errors": "Det er valideringsfeil som må rettes før publisering",
   "app_create_release_errors.check_status_on_build_error": "Det har skjedd en teknisk feil, så vi får ikke oppdatert statusen på bygget ditt. Vi prøver å sjekke statusen på nytt …",
   "app_create_release_errors.fetch_release_failed": "Det har skjedd en teknisk feil som gjør at du ikke kan bygge versjoner akkurat nå. Prøv igjen senere. Hvis problemet fortsetter, <a>ta kontakt med oss</a>.",
   "app_data_modelling.landing_dialog_create": "Lag en ny datamodell",
