fix: types and tests

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -699,6 +699,7 @@
   "general.true": "Sann",
   "general.try_again": "Prøv igjen",
   "general.unknown_error": "Det oppsto en ukjent feil da Studio skulle laste inn data.",
+  "general.updatedAt": "Oppdatert",
   "general.value": "Verdi",
   "general.widget": "widget",
   "general.yes": "Ja",
