feat(policy-editor): show access packages for persons in policy editor (#17593)

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -966,7 +966,6 @@
   "policy_editor.access_package_services": "Tjenester i denne tilgangspakken",
   "policy_editor.access_package_unknown_description": "Tilgangspakke {{accessPackageUrn}} finnes ikke",
   "policy_editor.access_package_unknown_heading": "<Ukjent tilgangspakke>",
-  "policy_editor.access_package_unknown_service_owner": "<Ukjent tjenesteeier>",
   "policy_editor.action_complete": "Bekreft mottatt tjenesteeier",
   "policy_editor.action_confirm": "Bekreft",
   "policy_editor.action_delete": "Slett",
@@ -993,11 +992,16 @@
   "policy_editor.expandable_card_close_icon": "Lukk kortet",
   "policy_editor.expandable_card_dropdown_copy": "Lag kopi",
   "policy_editor.expandable_card_open_icon": "Åpne kortet",
+  "policy_editor.guardianship_alert_first_line": "Vergerollene vil fungere tilsvarende roller fra Enhetsregisteret og tildeles av Statsforvalteren. Rollene vil vises i Altinn, men kan ikke tilgangsstyres. Bruk rollene for å gi verger tilgang til deres tjenester i kraft av rollen som verge.",
+  "policy_editor.guardianship_alert_header": "Snart kommer vergeroller i Altinn",
+  "policy_editor.guardianship_alert_second_line": "Mer om vergerollene: ",
   "policy_editor.more": "Mer",
   "policy_editor.narrowing_list_add_button": "Legg til en innsnevring av sub-ressursen",
   "policy_editor.narrowing_list_field_delete": "Fjern sub-ressursen",
   "policy_editor.narrowing_list_field_id": "Ressurs id",
   "policy_editor.narrowing_list_field_type": "Ressurstype",
+  "policy_editor.org_subjects_header": "For virksomheter",
+  "policy_editor.person_subjects_header": "For privatpersoner",
   "policy_editor.policy_rule_missing_1": "Regel {{ruleId}} mangler {{missing}}",
   "policy_editor.policy_rule_missing_2": "Regel {{ruleId}} mangler {{missing1}} og {{missing2}}",
   "policy_editor.policy_rule_missing_3": "Regel {{ruleId}} mangler {{missing1}}, {{missing2}}, og {{missing3}}",
@@ -1025,6 +1029,8 @@
   "policy_editor.rule_card_subjects_chosen_access_packages": "Valgte tilgangspakker",
   "policy_editor.rule_card_subjects_chosen_roles": "Valgte roller",
   "policy_editor.rule_card_subjects_error": "Du må velge minst én rolle eller tilgangspakke.",
+  "policy_editor.rule_card_subjects_guardianships": "Vergemål",
+  "policy_editor.rule_card_subjects_other_altinn_roles": "Andre/Altinn roller",
   "policy_editor.rule_card_subjects_other_roles": "Andre roller",
   "policy_editor.rule_card_subjects_search": "Søk i {{searchCollection}}",
   "policy_editor.rule_card_subjects_search_no_results": "Ingen treff i {{searchCollection}} for gitt søk",
