feat: support PDF service task in the BPMN editor (#16778)

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1110,10 +1110,12 @@
   "process_editor.configuration_panel_element_not_supported_title": "Elementet du har valgt, støttes ikke",
   "process_editor.configuration_panel_end_event": "Slutthendelse",
   "process_editor.configuration_panel_feedback_task": "Oppgave: Tilbakemelding",
+  "process_editor.configuration_panel_filename": "Filnavn for PDF",
   "process_editor.configuration_panel_header_help_text_confirmation": "Du bruker oppgaven Bekreftelse (confirmation) til å vise sluttbrukerne en oppsummering som de kan bekrefte.",
   "process_editor.configuration_panel_header_help_text_data": "Du bruker oppgaven Utfylling (data) hvis du skal samle inn eller vise data.",
   "process_editor.configuration_panel_header_help_text_feedback": "Du bruker oppgaven Tilbakemelding (feedback) når du vil at sluttbrukerne skal vente på en tilbakemelding fra tjenesteeier før de kan gå videre i arbeidsflyten eller avslutte den.",
   "process_editor.configuration_panel_header_help_text_payment": "Du bruker oppgaven Betaling (payment) når du vil at sluttbrukerne skal betale for noe.",
+  "process_editor.configuration_panel_header_help_text_pdf": "Du bruker oppgaven til å generere en PDF basert på dataene som er samlet inn i tidligere oppgaver.",
   "process_editor.configuration_panel_header_help_text_signing": "Du bruker oppgaven Signering (signing) når du vil at sluttbrukerne skal bekrefte med signatur.",
   "process_editor.configuration_panel_header_help_text_title": "Informasjon om valgt oppgave",
   "process_editor.configuration_panel_layout_set_id_not_unique": "Navnet må være unikt",
@@ -1126,7 +1128,29 @@
   "process_editor.configuration_panel_no_task_message": "Velg en oppgave i diagrammet til venstre for å se detaljer om valgt oppgave.",
   "process_editor.configuration_panel_no_task_title": "Du har ikke valgt noen oppgave",
   "process_editor.configuration_panel_payment_task": "Oppgave: Betaling",
+  "process_editor.configuration_panel_pdf_create_button": "Opprett",
+  "process_editor.configuration_panel_pdf_filename_description": "Angi filnavn for PDF-en, uten filendelse. Dersom intet filnavn er angitt, brukes applikasjonsnavnet som filnavn.",
+  "process_editor.configuration_panel_pdf_filename_label": "Filnavn",
+  "process_editor.configuration_panel_pdf_filename_no_text_resource": "Ingen",
+  "process_editor.configuration_panel_pdf_filename_search_label": "Søk etter tekstressurs",
+  "process_editor.configuration_panel_pdf_filename_tab_search": "Søk",
+  "process_editor.configuration_panel_pdf_filename_tab_write": "Skriv tekst",
+  "process_editor.configuration_panel_pdf_filename_value_label": "Filnavn",
+  "process_editor.configuration_panel_pdf_layout_set_link": "Utform PDF",
+  "process_editor.configuration_panel_pdf_layout_set_name_description": "Gi oppgaven et navn for å identifisere den i utformingsfanen.",
+  "process_editor.configuration_panel_pdf_layout_set_name_label": "Navn på oppgave",
+  "process_editor.configuration_panel_pdf_mode": "PDF-generering",
+  "process_editor.configuration_panel_pdf_mode_automatic": "Standard",
+  "process_editor.configuration_panel_pdf_mode_change_to_automatic_confirm": "Er du sikker på at du vil bytte til standard oppsett? Dette vil slette det egendefinerte PDF-oppsettet.",
+  "process_editor.configuration_panel_pdf_mode_description": "Velg oppsett for PDF-generering. Ved standard oppsett genereres PDF-en automatisk basert på de valgte oppgavene. Velg eget oppsett dersom du ønsker å tilpasse PDF-en selv ved hjelp av utformingsverktøyet.",
+  "process_editor.configuration_panel_pdf_mode_layout_based": "Eget oppsett",
+  "process_editor.configuration_panel_pdf_no_data_models": "Ingen datamodeller tilgjengelig",
+  "process_editor.configuration_panel_pdf_no_tasks_to_select": "Ingen oppgaver tilgjengelig.",
+  "process_editor.configuration_panel_pdf_select_data_model_description": "Velg en datamodell å knytte til oppgaven.",
+  "process_editor.configuration_panel_pdf_select_data_model_label": "Datamodell",
+  "process_editor.configuration_panel_pdf_task": "Oppgave: Lag PDF",
   "process_editor.configuration_panel_policy_title": "Tilganger",
+  "process_editor.configuration_panel_select_tasks_placeholder": "Velg oppgaver",
   "process_editor.configuration_panel_set_data_model": "Datamodell: {{dataModelName}}",
   "process_editor.configuration_panel_set_data_model_label": "Datamodell",
   "process_editor.configuration_panel_set_data_model_link": "Legg til datamodell",
@@ -1148,6 +1172,15 @@
   "process_editor.not_found_diagram_heading": "Det er ingen tilgjengelige diagramdata",
   "process_editor.not_found_process_error_message": "Det finnes ingen arbeidsflyt definert innenfor BPMN, Du kan sjekke om flyten finnes i BPMN-filen.",
   "process_editor.not_found_process_heading": "Fant ingen arbeidsflyt",
+  "process_editor.palette_create_confirmation_task": "Lag bekreftelsesoppgave",
+  "process_editor.palette_create_data_task": "Lag dataoppgave",
+  "process_editor.palette_create_feedback_task": "Lag tilbakemeldingsoppgave",
+  "process_editor.palette_create_payment_task": "Lag betalingsoppgave",
+  "process_editor.palette_create_pdf_service_task": "Lag PDF-systemoppgave",
+  "process_editor.palette_create_signing_task": "Lag signeringsoppgave",
+  "process_editor.palette_create_user_controlled_signing_task": "Lag brukerstyrt signeringsoppgave",
+  "process_editor.palette_pdf_service_task_frontend_version_error": "Denne funksjonaliteten krever versjon {{version}} eller høyere av app-frontend-react.",
+  "process_editor.palette_pdf_service_task_version_error": "Denne funksjonaliteten krever versjon {{version}} eller høyere av Altinn.App-.NET-bibliotekene.",
   "process_editor.recommended_action.new_name": "Gi oppgaven et navn",
   "process_editor.recommended_action.new_name_description": "Et godt navn gjør at du lettere finner oppgaven igjen på Utforming-siden. Hvis du velger Hopp over får oppgaven et tilfeldig navn, men det kan du endre senere.",
   "process_editor.recommended_action.new_name_label": "Navn på oppgaven",
